--- a/client/src/main/resources/sample.fxml
+++ b/client/src/main/resources/sample.fxml
@@ -12,6 +12,15 @@
       <Button fx:id="connDisconn" layoutX="452.0" layoutY="11.0" mnemonicParsing="false" onAction="#connectDisconnect" text="connect" />
       <Button fx:id="F5s" layoutX="283.0" layoutY="376.0" mnemonicParsing="false" onAction="#copyFromServer" text="F5" />
       <Button fx:id="F5l" layoutX="14.0" layoutY="376.0" mnemonicParsing="false" onAction="#copyToServer" text="F5" />
+      <ProgressBar fx:id="progressBar" layoutX="168.0" layoutY="162.0" prefWidth="200.0" progress="0.0" />
+      <ProgressIndicator fx:id="progressIndicator" layoutX="383.0" layoutY="151.0" progress="0.0" />
+      <DialogPane fx:id="authDialog" layoutX="103.0" layoutY="98.0" prefHeight="122.0" prefWidth="266.0" />
+      <Label fx:id="adLoginText" layoutX="141.0" layoutY="134.0" text="login" />
+      <Label fx:id="adPassText" layoutX="140.0" layoutY="163.0" text="pass" />
+      <PasswordField fx:id="adPass" layoutX="179.0" layoutY="159.0" />
+      <TextField fx:id="adLogin" layoutX="179.0" layoutY="130.0" />
+      <Button fx:id="adLoginButton" layoutX="271.0" layoutY="190.0" mnemonicParsing="false" onAction="#SendLogin" text="login" />
+      <Label fx:id="errMessg" layoutX="140.0" layoutY="107.0" prefHeight="17.0" prefWidth="211.0" text="Label" />
    </Pane>
    <columnConstraints>
       <ColumnConstraints />
